# IDE

./: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yaml
examples/: parse.cat
src/: App.tsx  AppModal.tsx  ResizablePanel.tsx  StatusBar.tsx  main.tsx  menuEvents.ts
src-tauri/: Cargo.lock_  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  structures.rs  terminal.rs
src-tauri/src/terminal/: state.rs
src/commands/: CommandPanel.tsx
src/editor/: Editor.tsx  OpenFiles.tsx  setup.tsx
src/hooks/: useDragScroll.ts
src/monaco/: vainilla.ts
src/side/: NavBar.tsx  SideBar.tsx  SideBarContent.tsx  SideBarItem.tsx  SidebarFile.tsx
src/side/content/: FileHierachy.tsx  FileItem.tsx
src/side/items/: ChangeTheme.tsx  CloseFileIcon.tsx  CompilerButton.tsx  OpenFolderIcon.tsx  OpenIcon.tsx  SaveAsIcon.tsx  SaveIcon.tsx  SidebarFile.tsx
src/stores/: editor.ts  files.ts  layout.ts  terminal.ts
src/terminal/: TerminalInstance.tsx  TerminalPanel.tsx  TerminalTabs.tsx  backend.ts  backend.tsx
src/terminal/Tabs/: Errores.tsx  Intermedio.tsx  Lexico.tsx  Semantico.tsx  Simbolos.tsx  Sintactico.tsx  Terminal.tsx  TerminalContainer.tsx
src/terminal/Tabs/Sintactico/: Node.tsx  Sintactico.tsx  TreeNode.tsx
src/theme/: index.ts
src/top/: TopBarButton.tsx
src/top/items/: ChangeTheme.tsx  CloseFileIcon.tsx  CompilerButton.tsx  NavBar.tsx  OpenFolderIcon.tsx  OpenIcon.tsx  SaveAsIcon.tsx  SaveIcon.tsx  ThemeButton.tsx
src/utils/: env.ts
