[package]
name = "tauriide"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri = { version = "1.5", features = [ "os-all", "dialog-save", "path-all", "fs-all", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scanner = { git = "https://github.com/ErnestoRB/Scanner.git" }
vainilla-machine = { git = "https://github.com/ErnestoRB/VainillaMachine.git" }
parser = { git = "https://github.com/ErnestoRB/Parser.git", branch = "code-gen"}
portable-pty = "0.8.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
